--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
    <h4>An HTML Playground</h4>
    <h5>An HTML Playground</h5>
    <h6>An HTML Playground</h6>
+
+   <a href="tom.html">click here to go to second page</a>
 <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
    Nullam facilisis arcu vel mollis finibus. Nunc facilisis 
