--- a/calculus_notes.html
+++ b/calculus_notes.html
@@ -420,6 +420,77 @@
 <a href="#0399">399</a>&nbsp;
 <a href="#0400">400</a>&nbsp;
 
+<a href="#0401">401</a>&nbsp;
+<a href="#0402">402</a>&nbsp;
+<a href="#0403">403</a>&nbsp;
+<a href="#0404">404</a>&nbsp;
+<a href="#0405">405</a>&nbsp;
+<a href="#0406">406</a>&nbsp;
+<a href="#0407">407</a>&nbsp;
+<a href="#0408">408</a>&nbsp;
+<a href="#0409">409</a>&nbsp;
+<a href="#0410">410</a>&nbsp;
+<a href="#0411">411</a>&nbsp;
+<a href="#0412">412</a>&nbsp;
+<a href="#0413">413</a>&nbsp;
+<a href="#0414">414</a>&nbsp;
+<a href="#0415">415</a>&nbsp;
+<a href="#0416">416</a>&nbsp;
+<a href="#0417">417</a>&nbsp;
+<a href="#0418">418</a>&nbsp;
+<a href="#0419">419</a>&nbsp;
+<a href="#0420">420</a>&nbsp;
+<a href="#0421">421</a>&nbsp;
+<a href="#0422">422</a>&nbsp;
+<a href="#0423">423</a>&nbsp;
+<a href="#0424">424</a>&nbsp;
+<a href="#0425">425</a>&nbsp;
+<a href="#0426">426</a>&nbsp;
+<a href="#0427">427</a>&nbsp;
+<a href="#0428">428</a>&nbsp;
+<a href="#0429">429</a>&nbsp;
+<a href="#0430">430</a>&nbsp;
+<a href="#0431">431</a>&nbsp;
+<a href="#0432">432</a>&nbsp;
+<a href="#0433">433</a>&nbsp;
+<a href="#0434">434</a>&nbsp;
+<a href="#0435">435</a>&nbsp;
+<a href="#0436">436</a>&nbsp;
+<a href="#0437">437</a>&nbsp;
+<a href="#0438">438</a>&nbsp;
+<a href="#0439">439</a>&nbsp;
+<a href="#0440">440</a>&nbsp;
+<a href="#0441">441</a>&nbsp;
+<a href="#0442">442</a>&nbsp;
+<a href="#0443">443</a>&nbsp;
+<a href="#0444">444</a>&nbsp;
+<a href="#0445">445</a>&nbsp;
+<a href="#0446">446</a>&nbsp;
+<a href="#0447">447</a>&nbsp;
+<a href="#0448">448</a>&nbsp;
+<a href="#0449">449</a>&nbsp;
+<a href="#0450">450</a>&nbsp;
+<a href="#0451">451</a>&nbsp;
+<a href="#0452">452</a>&nbsp;
+<a href="#0453">453</a>&nbsp;
+<a href="#0454">454</a>&nbsp;
+<a href="#0455">455</a>&nbsp;
+<a href="#0456">456</a>&nbsp;
+<a href="#0457">457</a>&nbsp;
+<a href="#0458">458</a>&nbsp;
+<a href="#0459">459</a>&nbsp;
+<a href="#0460">460</a>&nbsp;
+<a href="#0461">461</a>&nbsp;
+<a href="#0462">462</a>&nbsp;
+<a href="#0463">463</a>&nbsp;
+<a href="#0464">464</a>&nbsp;
+<a href="#0465">465</a>&nbsp;
+<a href="#0466">466</a>&nbsp;
+<a href="#0467">467</a>&nbsp;
+<a href="#0468">468</a>&nbsp;
+<a href="#0469">469</a>&nbsp;
+<a href="#0470">470</a>&nbsp;
+<a href="#0471">471</a>&nbsp;
 
       </font>
     </h3>
@@ -829,7 +900,77 @@
 <h3 id="0399"><img src="calculus_notes/calculus_20210726_0099.jpg"><a href="#top">back to top</a></h3>
 <h3 id="0400"><img src="calculus_notes/calculus_20210726_0100.jpg"><a href="#top">back to top</a></h3>
 
-
+<h3 id="0401"><img src="calculus_notes/calculus_20210728_0001.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0402"><img src="calculus_notes/calculus_20210728_0002.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0403"><img src="calculus_notes/calculus_20210728_0003.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0404"><img src="calculus_notes/calculus_20210728_0004.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0405"><img src="calculus_notes/calculus_20210728_0005.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0406"><img src="calculus_notes/calculus_20210728_0006.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0407"><img src="calculus_notes/calculus_20210728_0007.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0408"><img src="calculus_notes/calculus_20210728_0008.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0409"><img src="calculus_notes/calculus_20210728_0009.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0410"><img src="calculus_notes/calculus_20210728_0010.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0411"><img src="calculus_notes/calculus_20210728_0011.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0412"><img src="calculus_notes/calculus_20210728_0012.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0413"><img src="calculus_notes/calculus_20210728_0013.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0414"><img src="calculus_notes/calculus_20210728_0014.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0415"><img src="calculus_notes/calculus_20210728_0015.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0416"><img src="calculus_notes/calculus_20210728_0016.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0417"><img src="calculus_notes/calculus_20210728_0017.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0418"><img src="calculus_notes/calculus_20210728_0018.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0419"><img src="calculus_notes/calculus_20210728_0019.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0420"><img src="calculus_notes/calculus_20210728_0020.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0421"><img src="calculus_notes/calculus_20210728_0021.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0422"><img src="calculus_notes/calculus_20210728_0022.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0423"><img src="calculus_notes/calculus_20210728_0023.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0424"><img src="calculus_notes/calculus_20210728_0024.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0425"><img src="calculus_notes/calculus_20210728_0025.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0426"><img src="calculus_notes/calculus_20210728_0026.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0427"><img src="calculus_notes/calculus_20210728_0027.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0428"><img src="calculus_notes/calculus_20210728_0028.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0429"><img src="calculus_notes/calculus_20210728_0029.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0430"><img src="calculus_notes/calculus_20210728_0030.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0431"><img src="calculus_notes/calculus_20210728_0031.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0432"><img src="calculus_notes/calculus_20210728_0032.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0433"><img src="calculus_notes/calculus_20210728_0033.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0434"><img src="calculus_notes/calculus_20210728_0034.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0435"><img src="calculus_notes/calculus_20210728_0035.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0436"><img src="calculus_notes/calculus_20210728_0036.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0437"><img src="calculus_notes/calculus_20210728_0037.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0438"><img src="calculus_notes/calculus_20210728_0038.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0439"><img src="calculus_notes/calculus_20210728_0039.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0440"><img src="calculus_notes/calculus_20210728_0040.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0441"><img src="calculus_notes/calculus_20210728_0041.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0442"><img src="calculus_notes/calculus_20210728_0042.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0443"><img src="calculus_notes/calculus_20210728_0043.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0444"><img src="calculus_notes/calculus_20210728_0044.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0445"><img src="calculus_notes/calculus_20210728_0045.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0446"><img src="calculus_notes/calculus_20210728_0046.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0447"><img src="calculus_notes/calculus_20210728_0047.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0448"><img src="calculus_notes/calculus_20210728_0048.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0449"><img src="calculus_notes/calculus_20210728_0049.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0450"><img src="calculus_notes/calculus_20210728_0050.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0451"><img src="calculus_notes/calculus_20210728_0051.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0452"><img src="calculus_notes/calculus_20210728_0052.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0453"><img src="calculus_notes/calculus_20210728_0053.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0454"><img src="calculus_notes/calculus_20210728_0054.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0455"><img src="calculus_notes/calculus_20210728_0055.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0456"><img src="calculus_notes/calculus_20210728_0056.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0457"><img src="calculus_notes/calculus_20210728_0057.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0458"><img src="calculus_notes/calculus_20210728_0058.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0459"><img src="calculus_notes/calculus_20210728_0059.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0460"><img src="calculus_notes/calculus_20210728_0060.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0461"><img src="calculus_notes/calculus_20210728_0061.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0462"><img src="calculus_notes/calculus_20210728_0062.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0463"><img src="calculus_notes/calculus_20210728_0063.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0464"><img src="calculus_notes/calculus_20210728_0064.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0465"><img src="calculus_notes/calculus_20210728_0065.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0466"><img src="calculus_notes/calculus_20210728_0066.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0467"><img src="calculus_notes/calculus_20210728_0067.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0468"><img src="calculus_notes/calculus_20210728_0068.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0469"><img src="calculus_notes/calculus_20210728_0069.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0470"><img src="calculus_notes/calculus_20210728_0070.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0471"><img src="calculus_notes/calculus_20210728_0071.jpg"><a href="#top">back to top</a></h3>
 
 
 
