--- a/calculus_notes.html
+++ b/calculus_notes.html
@@ -491,6 +491,14 @@
 <a href="#0469">469</a>&nbsp;
 <a href="#0470">470</a>&nbsp;
 <a href="#0471">471</a>&nbsp;
+<a href="#0472">472</a>&nbsp;
+<a href="#0473">473</a>&nbsp;
+<a href="#0474">474</a>&nbsp;
+<a href="#0475">475</a>&nbsp;
+<a href="#0476">476</a>&nbsp;
+<a href="#0477">477</a>&nbsp;
+<a href="#0478">478</a>&nbsp;
+<a href="#0479">479</a>&nbsp;
 
       </font>
     </h3>
@@ -971,6 +979,14 @@
 <h3 id="0469"><img src="calculus_notes/calculus_20210728_0069.jpg"><a href="#top">back to top</a></h3>
 <h3 id="0470"><img src="calculus_notes/calculus_20210728_0070.jpg"><a href="#top">back to top</a></h3>
 <h3 id="0471"><img src="calculus_notes/calculus_20210728_0071.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0472"><img src="calculus_notes/calculus_20210728_0072.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0473"><img src="calculus_notes/calculus_20210728_0073.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0474"><img src="calculus_notes/calculus_20210728_0074.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0475"><img src="calculus_notes/calculus_20210728_0075.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0476"><img src="calculus_notes/calculus_20210728_0076.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0477"><img src="calculus_notes/calculus_20210728_0077.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0478"><img src="calculus_notes/calculus_20210728_0078.jpg"><a href="#top">back to top</a></h3>
+<h3 id="0479"><img src="calculus_notes/calculus_20210728_0079.jpg"><a href="#top">back to top</a></h3>
 
 
 
