--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <font>
       <a href="tom.html">TOM</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="calculus_notes">CALCULUS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="statistics_notes">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="#">ZZZ</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="#">ZZZ</a>
       </font>
