--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <font>
       <a href="tom.html">TOM</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="calculus_notes">CALCULUS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="statistics_notes">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="calculus_notes.html">CALCULUS</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="statistics_notes.html">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="#">ZZZ</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="#">ZZZ</a>
       </font>
@@ -30,10 +30,10 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <font>
       <a href="tom.html">GRAD SHEET</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">CODING</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">MODELLING</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">ZZZ</a>
+      <a href="java_old_selected_notes.html">JAVA-O</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="java_basics2_notes.html">JAVA-B</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#">CODE-ES</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#">BLOG</a>
       </font>
     </h3>
     
