--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <font>
-      <a href="tom.html">GRAD SHEET</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="gradsheet.html">GRAD SHEET</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="java_old_selected_notes.html">JAVA-O</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="java_basics2_notes.html">JAVA-B</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="#">CODE-ES</a>&nbsp;&nbsp;&nbsp;&nbsp;
