--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="java_old_selected_notes.html">JAVA-O</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="java_basics2_notes.html">JAVA-B</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="#">CODE-ES</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">BLOG</a>
+      <a href="modelling_animation.html">MODELLING</a>
       </font>
     </h3>
     
