--- a/modelling_animation.html
+++ b/modelling_animation.html
@@ -48,10 +48,10 @@
 <h3 id="3.2"><img src="modelling/3.2_logo.png"><a href="#top">back to top</a></h3>
 <h3 id="3.3"><img src="modelling/3.3_logo.png"><a href="#top">back to top</a></h3>
 <h3 id="4.1"><img src="modelling/4.1_iedc.JPG"><a href="#top">back to top</a></h3>
-<h3 id="4.2"><img src="modelling/4.2_iedc.jpg"><a href="#top">back to top</a></h3>
-<h3 id="4.3"><img src="modelling/4.3_iedc.jpg"><a href="#top">back to top</a></h3>
-<h3 id="4.4"><img src="modelling/4.4_iedc.jpg"><a href="#top">back to top</a></h3>
-<h3 id="4.5"><img src="modelling/4.5_iedc.jpg"><a href="#top">back to top</a></h3>
+<h3 id="4.2"><img src="modelling/4.2_iedc.JPG"><a href="#top">back to top</a></h3>
+<h3 id="4.3"><img src="modelling/4.3_iedc.JPG"><a href="#top">back to top</a></h3>
+<h3 id="4.4"><img src="modelling/4.4_iedc.JPG"><a href="#top">back to top</a></h3>
+<h3 id="4.5"><img src="modelling/4.5_iedc.JPG"><a href="#top">back to top</a></h3>
 
 
    </body>
