--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <font>
-      <a href="tom.html">TOM</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="under_construction.html">TOM</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="calculus_notes.html">CALCULUS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="statistics_notes.html">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">ZZZ</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">ZZZ</a>
+      <a href="under_construction.html">ZZZ</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="under_construction.html">ZZZ</a>
       </font>
     </h3>
     <h3>
@@ -32,7 +32,7 @@
       <a href="gradsheet.html">GRAD SHEET</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="java_old_selected_notes.html">JAVA-O</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="java_basics2_notes.html">JAVA-B</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#">CODE-ES</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="code_essentials.html">CODE-ES</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="modelling_animation.html">MODELLING</a>
       </font>
     </h3>
