--- a/code_essentials.html
+++ b/code_essentials.html
@@ -192,7 +192,7 @@ public class excel_reader</br>
   System.out.println(cellA1); */</br>
   </br>
   int i;</br>
-  for(i=2;i<last_row;i++)    //gets 3rd row onwards</br>
+  for(i=2;i&#8826last_row;i++)    //gets 3rd row onwards </br>
   {</br>
    XSSFRow rowA3=fSheet.getRow(i);</br>
    XSSFCell cellA3=rowA3.getCell(0); //get 1st column</br>
