--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <font>
-      <a href="under_construction.html">TOM</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="engineering_notes.html">NOTES</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="calculus_notes.html">CALCULUS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="statistics_notes.html">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="under_construction.html">ZZZ</a>&nbsp;&nbsp;&nbsp;&nbsp;
