--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="engineering_notes.html">NOTES</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="calculus_notes.html">CALCULUS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="statistics_notes.html">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="under_construction.html">ZZZ</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="quantum_computing.html">QUANTUM</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="under_construction.html">ZZZ</a>
       </font>
     </h3>
