--- a/tom.html
+++ b/tom.html
@@ -8,14 +8,14 @@
    </head>
    <body>
        This is my very first website and I'm <b>extremely excited!!!!!!</b>
-   <h1>My First Website</h1>
+   <h1>Thanks for passing by, Kindly try the other Tabs. :)</h1>
    <h2>An HTML Playground</h2>
    <h3>An HTML Playground</h3>
    <h4>An HTML Playground</h4>
    <h5>An HTML Playground</h5>
    <h6>An HTML Playground</h6>
 
-   <a href="index.html">click here to go to second page</a>
+   <a href="index.html">click here to go to home page</a>
 
 
 <img src="asdf.jpg">
