--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="calculus_notes.html">CALCULUS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="statistics_notes.html">PROBABILITY AND STATISTICS</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="quantum_computing.html">QUANTUM</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="under_construction.html">ZZZ</a>
+      <a href="misc.html">MISC</a>
       </font>
     </h3>
     <h3>
